be-69: Refactor locationaddress - replace all LocationAddress json DTO to LocationAddress uid when create, update and LocationAddressDto when read - add basic data for location address - adjust mapper to align with this change